--- a/CursoHTML-aula1/bio.css
+++ b/CursoHTML-aula1/bio.css
@@ -1,7 +1,7 @@
 h1{
     font-size: 80px;
     background-color: rgb(140, 30, 60);
-    color: #FAFFFA;
+    color: rgb(149, 225, 255);
     text-align: center;
 }
 h2{
