--- a/CursoHTML-aula1/bio.css
+++ b/CursoHTML-aula1/bio.css
@@ -9,6 +9,8 @@ main h1{
     color: rgb(255, 255, 255);
     text-align: center;
     font-family: "Open Sans Condensed", sans-serif;
+    padding: 20px;
+    margin: 0;
 }
 h2{
     font-size: 40px;
@@ -16,4 +18,12 @@ h2{
 }
 p{
     text-align: justify;
+}
+blockquote{
+    background-color: #D3DDDA;
+    padding: 16px;
+    border: 10px solid #C2CCCA;
+    width: 250px;
+    margin: 0;
+    box-sizing: border-box;
 }
